Added outline for the Kitaev-Webb Algorithm

--- a/main.ipynb
+++ b/main.ipynb
@@ -83,7 +83,11 @@
     "\n",
     "where the angle $\\alpha$ is given by \n",
     "\n",
-    "$\\alpha = \\cos^{-1}\\left(\\sqrt{\\frac{g(\\mu/2, \\sigma/2)}{g(\\mu, \\sigma)}}\\right)$"
+    "$\\alpha = \\cos^{-1}\\left(\\sqrt{\\frac{g(\\mu/2, \\sigma/2)}{g(\\mu, \\sigma)}}\\right).$\n",
+    "\n",
+    "The function $g$ here is defined as follows: \n",
+    "\n",
+    "$g(\\mu, \\sigma) = \\sum_{n=-\\infty}^{\\infty} e^{-\\frac{(n-\\mu)^2}{\\sigma^2}}$"
    ]
   },
   {
