Wrote code for the first two steps of Kitaev-Webb

--- a/main.ipynb
+++ b/main.ipynb
@@ -66,29 +66,204 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Example 1: Gaussian Wave Function with No Potential\n",
+    "# Example 1: Gaussian Wave Function with No Potential\n",
     "\n",
-    "#### Initialization\n",
-    "We use the Kitaev-Webb Algorithm to first create our initial state. \n",
-    "\n",
-    "The goal here is to create the state of the periodic discrete Gaussian, which can be expressed recursively as \n",
-    "$\n",
-    "\\newcommand{\\bra}[1]{\\left< #1 \\right|}\n",
+    "<!-- Adding Latex commands for bra-ket notation --> \n",
+    "$\\newcommand{\\bra}[1]{\\left< #1 \\right|}\n",
     "\\newcommand{\\ket}[1]{\\left| #1 \\right>}\n",
     "\\newcommand{\\bk}[2]{\\left< #1 \\middle| #2 \\right>}\n",
-    "\\newcommand{\\bke}[3]{\\left< #1 \\middle| #2 \\middle| #3 \\right>}\n",
-    "$\n",
+    "\\newcommand{\\bke}[3]{\\left< #1 \\middle| #2 \\middle| #3 \\right>}$\n",
     "\n",
-    "$\\ket{\\xi_{\\mu, \\sigma, N}} = \\ket{\\xi_{\\frac{\\mu}{2}, \\frac{\\sigma}{2}, N-1}} \\otimes \\cos(\\alpha) \\ket{0} + \\ket{\\xi_{\\frac{\\mu-1}{2}, \\frac{\\sigma}{2}, N-1}} \\otimes \\sin(\\alpha)\\ket{1}$\n",
+    "## Outline of Kitaev-Webb Algorithm \n",
+    "To prepare the Gaussian wavefunction, we use the Kitaev-Webb Algorithm that is outlined as follows: \n",
+    "![Outline of Kitaev-Webb](./Kitaev-Webb.png)\n",
     "\n",
-    "where the angle $\\alpha$ is given by \n",
+    "This algorithm can create the state of the periodic discrete Gaussian, which can be expressed recursively as \n",
     "\n",
-    "$\\alpha = \\cos^{-1}\\left(\\sqrt{\\frac{g(\\mu/2, \\sigma/2)}{g(\\mu, \\sigma)}}\\right).$\n",
+    "$$\\ket{\\xi_{\\mu, \\sigma, N}} = \\ket{\\xi_{\\frac{\\mu}{2}, \\frac{\\sigma}{2}, N-1}} \\otimes \\cos(\\alpha) \\ket{0} + \\ket{\\xi_{\\frac{\\mu-1}{2}, \\frac{\\sigma}{2}, N-1}} \\otimes \\sin(\\alpha)\\ket{1} \\tag{11}$$.\n",
     "\n",
-    "The function $g$ here is defined as follows: \n",
     "\n",
-    "$g(\\mu, \\sigma) = \\sum_{n=-\\infty}^{\\infty} e^{-\\frac{(n-\\mu)^2}{\\sigma^2}}$"
+    "## Inputs"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mu = 0\n",
+    "sigma = 1\n",
+    "k = 3\n",
+    "N = 3\n",
+    "\n",
+    "mu_size = 1  # The number of qubits used to represent mu\n",
+    "sigma_size = 1  # The number of qubits used to represent sigma\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1. Creating the initial state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"word-wrap: normal;white-space: pre;background: #fff0;line-height: 1.1;font-family: &quot;Courier New&quot;,Courier,monospace\">          \n",
+       " alpha_0: \n",
+       "          \n",
+       " alpha_1: \n",
+       "          \n",
+       " alpha_2: \n",
+       "          \n",
+       "    mu_0: \n",
+       "          \n",
+       " sigma_0: \n",
+       "          \n",
+       "     n_0: \n",
+       "          \n",
+       "     n_1: \n",
+       "          \n",
+       "     n_2: \n",
+       "          \n",
+       "result_0: \n",
+       "          \n",
+       "result_1: \n",
+       "          \n",
+       "result_2: \n",
+       "          </pre>"
+      ],
+      "text/plain": [
+       "          \n",
+       " alpha_0: \n",
+       "          \n",
+       " alpha_1: \n",
+       "          \n",
+       " alpha_2: \n",
+       "          \n",
+       "    mu_0: \n",
+       "          \n",
+       " sigma_0: \n",
+       "          \n",
+       "     n_0: \n",
+       "          \n",
+       "     n_1: \n",
+       "          \n",
+       "     n_2: \n",
+       "          \n",
+       "result_0: \n",
+       "          \n",
+       "result_1: \n",
+       "          \n",
+       "result_2: \n",
+       "          "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def binary_approx(n, k):\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    Input:\n",
+    "        n: real number between 0 and 1\n",
+    "        k: the number of bits use to approximate n\n",
+    "        \n",
+    "    Output: \n",
+    "        a: a list such that the i-th element is 1 or 0\n",
+    "    \"\"\"\n",
+    "    a = []\n",
+    "    total = 0\n",
+    "    for i in range(1, k+1):\n",
+    "        bit = 0\n",
+    "        if (n > total + 1/2**i): \n",
+    "            bit = 1\n",
+    "        else:\n",
+    "            bit = 0\n",
+    "        a.append(bit)\n",
+    "        total += bit/2**i\n",
+    "    return (a, total)\n",
+    "\n",
+    "alpha_register = QuantumRegister(k, 'alpha')\n",
+    "\n",
+    "mu_register = QuantumRegister(mu_size, 'mu')\n",
+    "sigma_register = QuantumRegister(sigma_size, 'sigma')\n",
+    "N_register = QuantumRegister(N, 'n')\n",
+    "res_register = QuantumRegister(N, 'result')\n",
+    "\n",
+    "qc = QuantumCircuit(alpha_register, mu_register, sigma_register, N_register, res_register)\n",
+    "qc.draw()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2. Compute $\\alpha$\n",
+    "\n",
+    "The angle $\\alpha$ is defined as\n",
+    "\n",
+    "$$\\alpha = \\cos^{-1}\\left(\\sqrt{\\frac{f(\\mu/2, \\sigma/2)}{f(\\mu, \\sigma)}}\\right). \\tag{12}$$\n",
+    "\n",
+    "The function $f$ is the normalization factor defined as follows: \n",
+    "\n",
+    "$$f(\\mu, \\sigma) = \\sum_{n=-\\infty}^{\\infty} e^{-\\frac{(n-\\mu)^2}{\\sigma^2}}. \\tag{7}$$\n",
+    "\n",
+    "To input the value $\\alpha$ into our quantum circuit, we need to approximate this number using the number of qubits we have. Since $0 \\leq \\alpha \\leq 2\\pi$, we can approximate this number using k-digits of binary notation given by the formula $\\frac{\\alpha}{2\\pi} \\approx \\sum_{i=1}^k \\frac{a_i}{2^i}$ that gives us the digits we need to approximate $\\alpha$ as $\\alpha \\approx \\sum_{i=1}^k \\pi\\frac{a_i}{2^{i-1}}$. Here, $a_i$ takes the values either 0 or 1. This binary notation gives us a way to implement the rotation operator as a sequence of $k$ standard rotations as \n",
+    "$$R(\\alpha) \\approx R(\\pi/2^{k-1})^{\\alpha_k}\\cdots R(\\pi/2^2)^{\\alpha_2}R(\\pi/2)^{\\alpha_1}$$\n",
+    "\n",
+    "The following block implements some routines to implement the functions needed to create $\\alpha$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11143872044136584\n",
+      "0.109375\n",
+      "[0, 0, 0, 1, 1, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(mu, sigma, n):\n",
+    "    return np.sum(np.exp((-(np.arange(-n, n+1, 1) - mu)**2)/float(sigma**2)))\n",
+    "\n",
+    "def angle(mu, sigma, n=1000):\n",
+    "    return np.arccos(math.sqrt(g(mu/2, sigma/2, n)/ g(mu, sigma, n)))\n",
+    "\n",
+    "# Example code to verify correctness\n",
+    "alpha = angle(mu, sigma)/(np.pi*2)\n",
+    "precision = 6\n",
+    "\n",
+    "(alpha_binary, alpha_approx) = binary_approx(alpha, precision)\n",
+    "\n",
+    "print(alpha)\n",
+    "print(alpha_approx)\n",
+    "print(alpha_binary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -98,6 +273,7 @@
    "source": [
     "def KWA(mu, sigma, k, N):\n",
     "    \"\"\"\n",
+    "    Kitaev-Webb Algorithm to construct the prepare the Gaussian wavefunction\n",
     "    Parameters:\n",
     "        - mu: mean\n",
     "        - sigma: sd\n",
