Fixed Latex error

--- a/main.ipynb
+++ b/main.ipynb
@@ -73,11 +73,10 @@
     "![Outline of Kitaev-Webb](./Kitaev-Webb.png)\n",
     "\n",
     "This algorithm can create the state of the periodic discrete Gaussian, which can be expressed recursively as \n",
-    "$$\n",
-    "\\newcommand{\\bra}[1]{\\left< #1 \\right|}\n",
-    "\\newcommand{\\ket}[1]{\\left| #1 \\right>}\n",
-    "\\newcommand{\\bk}[2]{\\left< #1 \\middle| #2 \\right>}\n",
-    "\\newcommand{\\bke}[3]{\\left< #1 \\middle| #2 \\middle| #3 \\right>}$$\n",
+    "$\\newcommand{\\bra}[1]{\\left< #1 \\right|}$\n",
+    "$\\newcommand{\\ket}[1]{\\left| #1 \\right>}$\n",
+    "$\\newcommand{\\bk}[2]{\\left< #1 \\middle| #2 \\right>}$\n",
+    "$\\newcommand{\\bke}[3]{\\left< #1 \\middle| #2 \\middle| #3 \\right>}$\n",
     "\n",
     "$$\\ket{\\xi_{\\mu, \\sigma, N}} = \\ket{\\xi_{\\frac{\\mu}{2}, \\frac{\\sigma}{2}, N-1}} \\otimes \\cos(\\alpha) \\ket{0} + \\ket{\\xi_{\\frac{\\mu-1}{2}, \\frac{\\sigma}{2}, N-1}} \\otimes \\sin(\\alpha)\\ket{1} \\tag{11}$$.\n",
     "\n",
